<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createNotification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notifications.CreateNotification">

    <include
        layout="@layout/toolbar"
        android:id="@+id/notificationToolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/notificationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Post An Annoucement"
        android:textStyle="bold"
        android:textSize="35dp"
        android:textColor="@color/White"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationToolbar"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/notificationMainBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationHeader"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notificationTitleLayout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="15dp"
                android:textColorHint="@color/White"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/notificationHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="20dp"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notificationTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/arrowresized"
                    android:drawablePadding="35dp"
                    android:drawableTint="@color/White"
                    android:hint="Notification Title"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="78dp"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notificationDescriptionLayout"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    android:textColorHint="@color/White"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/notificationTitleLayout"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notificationDescriptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/arrowresized"
                        android:drawablePadding="35dp"
                        android:drawableTint="@color/White"
                        android:hint="Notification Description"
                        android:textColor="@color/White"
                        android:textColorHint="@color/White">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/addNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/Secondary"
        android:text="Post Annoucement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableRight="@drawable/notification_bell_resize"
        android:drawableTint="@color/White"
        />


</androidx.constraintlayout.widget.ConstraintLayout>