...
                android:id="@+id/eventNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="28sp"
                android:textStyle="bold"
                android:text="@string/event_annoucements"
                android:gravity="center_horizontal"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
...
