...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/notificationIconBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/zxing_transparent"
            android:src="@drawable/ic_notification_announcements"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
