<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/eventPosterDetailsPresent">


<!-- <TextView
        android:id="@+id/text_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                android:id="@+id/promo_qr_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/description_promo_qrcode"
                app:layout_constraintBottom_toTopOf="@id/signup_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGenPromoQR" />

            <CheckBox
                android:id="@+id/signup_button"
...
