<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eventTabBar"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    android:paddingHorizontal="5dp"
    android:background="@color/Surface">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upcomingEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="Upcoming"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/Primary"
        android:layout_marginEnd="3dp"
        android:textColor="@color/OnPrimary">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signedUpVEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="Signed-Up"
        android:textColor="@color/OnSecondary"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/Secondary"
        android:layout_marginEnd="3dp">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="My Events"
        android:textColor="@color/OnSecondary"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/Secondary">
    </com.google.android.material.button.MaterialButton>
</LinearLayout>